# compactr.rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  package.json  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
compactr/: Cargo.toml
compactr-derive/: Cargo.toml
compactr-derive/src/: lib.rs
compactr/examples/: advanced.rs  basic.rs  openapi_from_spec_file.rs  openapi_product_api.rs  openapi_schema_conversion.rs  openapi_user_crud.rs
compactr/examples/fixtures/: api_spec.json
compactr/src/: error.rs  lib.rs  value.rs
compactr/src/codec/: buffer.rs  decoder.rs  encoder.rs  mod.rs  traits.rs
compactr/src/formats/: binary.rs  datetime.rs  ipaddr.rs  mod.rs  uuid.rs
compactr/src/schema/: definition.rs  mod.rs  registry.rs
compactr/tests/: binary_format_compatibility.rs  cross_compatibility.rs  integration.rs  test_decode_js_fixture.rs  test_js_compat.rs
compactr/tests/fixtures/: generate_fixtures.js  generate_test_vectors.js
scripts/: setup-fixtures.sh
