[workspace]
members = ["compactr", "compactr-derive"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Frederic Charette <fredericcharette@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/compactr/compactr.rs"
documentation = "https://docs.rs/compactr"
homepage = "https://github.com/compactr/compactr.rs"
keywords = ["serialization", "openapi", "schema", "binary"]
categories = ["encoding", "data-structures", "parser-implementations"]
rust-version = "1.70"

[workspace.dependencies]
# Core dependencies
bytes = "1.5"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Optional dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.1"

# Proc-macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Dev dependencies
criterion = "0.5"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
